# SmartCube

backend/: server.js
backend/first-gear-app/: .binpath  Cargo.toml
backend/first-gear-app/src/: lib.rs
contracts/ai/: .binpath
contracts/client/: .binpath  Cargo.toml
contracts/client/io/src/: lib.rs
contracts/client/src/: lib.rs
contracts/db/: .binpath  Cargo.toml
contracts/db/io/: Cargo.toml
contracts/db/io/src/: lib.rs
contracts/db/src/: lib.rs
contracts/escrow/: .binpath  Cargo.toml
contracts/escrow/io/: Cargo.toml
contracts/escrow/io/src/: lib.rs
contracts/token/ft-logic/: .binpath
contracts/token/ft-main/: .binpath
contracts/token/ft-storage/: .binpath
frontend/: .env  package.json
frontend/public/: index.html
frontend/src/: App.scss  App.tsx
frontend/src/assets/wasm/: db.meta.wasm
frontend/src/components/layout/header/: Header.module.scss  Header.tsx
frontend/src/components/layout/header/logo/: Logo.tsx
frontend/src/pages/: index.tsx
frontend/src/pages/audit/: Audit.tsx  index.ts
frontend/src/pages/home/: Home.tsx
frontend/src/pages/mine/: Mine.tsx  index.ts
frontend/src/pages/search/: Search.tsx
frontend/src/pages/upload/: Upload.tsx
