[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
circular_buffer = { git = "https://github.com/breathx/circular-buffer-rs.git", default-features = false }
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"], branch = "stable" }
codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false }
scale-info = { version = "2.2.0", default-features = false }
client_io = { path = "io"}
ai_io = { path = "../ai/io"}


[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "stable"  }